agregar texto index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         </button>
     </header>
     <main class="home__mainContanier">
+        <h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolore quam voluptate quaerat expedita at laboriosam. Quia eaque possimus non, dolore laborum ex maiores libero amet dignissimos voluptatem sapiente saepe!
+        </h1>
         <section class="grilla1">
             <a href="index.html" class="banner__index">
                 <div class="banner__principal">
